--- a/index.html
+++ b/index.html
@@ -358,7 +358,22 @@
       justify-content:space-between;
       gap: 10px;
     }
-    .codes{ min-width: 0; position: relative; padding-right: 64px; }
+    .codes{
+      flex: 1 1 auto;
+      min-width: 0;
+    }
+
+    /* Title row: Name + Change badge (Template A) */
+    .title-row{
+      display:flex;
+      align-items:center;
+      gap: 10px;
+      min-width: 0;
+    }
+    .title-row .big{
+      flex: 1 1 auto;
+      min-width: 0;
+    }
     .codes .big{
       font-size: 20px;
       font-weight: 900;
@@ -368,7 +383,7 @@
       overflow:hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
-      max-width: 310px;
+      max-width: 100%;
     }
     .codes .small{
       margin: 4px 0 0 0;
@@ -377,50 +392,52 @@
       overflow:hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
-      max-width: 310px;
+      max-width: 100%;
     }
 
     .chg-badge{
-      position:absolute;
-      top: -4px;
-      right: -5px;
+      position: static;
       display:inline-flex;
       align-items:center;
       justify-content:center;
-      padding: 6px 8px;
-      border-radius: 12px;
+      padding: 6px 10px;
+      border-radius: 999px;
       font-weight: 950;
-      font-size: 18px;
+      font-size: 16px;
       letter-spacing: .1px;
       white-space: nowrap;
-      min-width: 58px;
+      min-width: 64px;
       line-height: 1;
       background: rgba(17,24,39,.06);
       color: var(--muted);
+      flex: 0 0 auto;
     }
     .chg-badge.up{ background: rgba(239,68,68,.10); color: var(--red); }
     .chg-badge.down{ background: rgba(16,185,129,.12); color: var(--green-deep); }
     .chg-badge.flat{ background: rgba(17,24,39,.06); color: var(--muted); }
 
 
-    /* Card note box (备注). Uses existing empty middle space in .card-top; does not change other layout blocks. */
+    /* Card note box (备注). */
+    .note-row{ margin-top: 8px; }
+
+    /* Card note box (备注) — Template A: placed under header, 2-line clamp */
     .card-note{
-      flex: 0 1 180px;
-      min-width: 96px;
-      height: 34px;
-      margin-top: -6px;
-      padding: 5px 10px;
+      width: 100%;
+      min-height: 34px;
+      padding: 8px 10px;
       border-radius: 14px;
       border: 1px solid rgba(17,24,39,.08);
       background: rgba(255,255,255,.72);
       color: var(--text);
       font-size: 12px;
-      line-height: 1.0;
+      line-height: 1.25;
       overflow: hidden;
       text-overflow: clip;
       white-space: normal;
       word-break: break-word;
-      align-self: flex-start;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
     }
     .card-note .note-ph{
       color: var(--muted);
@@ -471,6 +488,7 @@
     }
     .price-left .price{
       display:flex;
+      font-variant-numeric: tabular-nums;
       align-items:center;
       gap: 8px;
       margin:0;
@@ -605,7 +623,7 @@
     .pill{
       display:flex;
       flex-direction:column;
-      gap: 2px;
+      gap: 1px;
       padding: 7px 10px;
       border-radius: 14px;
       min-width: 0;
@@ -624,13 +642,24 @@
     .pill .v{
       font-size: clamp(14px, 3.3vw, 20px);
       font-weight: 950;
+      font-variant-numeric: tabular-nums;
       letter-spacing: .2px;
       line-height: 1.05;
       overflow:hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
     }
-    .pills.cols-5 .pill .v{
+
+    .pill .d{
+      font-size: 11px;
+      font-weight: 850;
+      line-height: 1.05;
+      opacity: .85;
+      font-variant-numeric: tabular-nums;
+      white-space: nowrap;
+    }
+
+        .pills.cols-5 .pill .v{
       font-size: clamp(13px, 3.0vw, 18px);
     }
     .pill.red{ background: var(--pill-red-bg); color: var(--pill-red-text); }
@@ -985,7 +1014,6 @@
   <script>
     // ---------- Data Layer ----------
     const LS_KEY = "strategy_cards_frontend_only_v3";
-    const LS_DRAFT_KEY = "strategy_cards_form_draft_v2";
     const LS_BG_REFRESH_KEY = "strategy_cards_bg_refresh_v1";
     const LS_DAY_KEY = "strategy_cards_last_seen_day_v1";
 
@@ -1053,21 +1081,6 @@ function isAutoRefreshLocked(){
     function persist(){
       localStorage.setItem(LS_KEY, JSON.stringify(items));
     }
-
-    function loadDraft(){
-      try{
-        const raw = localStorage.getItem(LS_DRAFT_KEY);
-        if(!raw) return {};
-        const d = JSON.parse(raw);
-        return (d && typeof d === "object") ? d : {};
-      }catch(_){
-        return {};
-      }
-    }
-    function saveDraft(d){
-      try{ localStorage.setItem(LS_DRAFT_KEY, JSON.stringify(d)); }catch(_){}
-    }
-
     function nowTime(){
       const d = new Date();
       const hh = String(d.getHours()).padStart(2,"0");
@@ -1148,6 +1161,16 @@ function isAutoRefreshLocked(){
       if(!Number.isFinite(n)) return "--";
       return (Math.round(n*100)/100).toFixed(2);
     }
+
+    function formatDeltaPct(cur, level){
+      const c = Number(cur);
+      const l = Number(level);
+      if(!Number.isFinite(c) || c === 0 || !Number.isFinite(l)) return "--";
+      const pct = (l - c) / c * 100;
+      const sign = pct > 0 ? "+" : "";
+      return `${sign}${pct.toFixed(2)}%`;
+    }
+
 
     // ---------- Quote API (Pure Frontend via script injection) ----------
     function toTencentMarketCode(symbol){
@@ -1691,6 +1714,13 @@ if(dashBodyEl) dashBodyEl.innerHTML = html;
           chgText = `${sign}${chgPct.toFixed(2)}%`;
         }
 
+
+        const stopDelta = formatDeltaPct(cur, it.stop);
+        const supportDelta = formatDeltaPct(cur, it.support);
+        const breakoutDelta = hasBreakout ? formatDeltaPct(cur, it.breakout) : "--";
+        const tp1Delta = formatDeltaPct(cur, it.tp1);
+        const tp2Delta = hasTp2 ? formatDeltaPct(cur, it.tp2) : "--";
+
         const card = document.createElement("div");
         card.className = "card";
         card.id = "card-" + it.symbol;
@@ -1705,11 +1735,12 @@ if(dashBodyEl) dashBodyEl.innerHTML = html;
           <div class="card-inner">
             <div class="card-top">
               <div class="codes">
-                <p class="big">${bigTitle}</p>
+                <div class="title-row">
+                  <p class="big">${bigTitle}</p>
+                  <div class="chg-badge ${chgClass}" title="涨跌幅">${escapeHtml(chgText)}</div>
+                </div>
                 <p class="small">${sub}</p>
-                <div class="chg-badge ${chgClass}" title="涨跌幅">${escapeHtml(chgText)}</div>
               </div>
-              <div class="card-note" title="${noteTitle}">${noteHtml}</div>
               <div class="card-tools">
                 <button class="tool sort-only" data-act="moveUp" data-id="${it.id}" aria-label="Move Up" title="上移">
                   <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
@@ -1739,6 +1770,9 @@ if(dashBodyEl) dashBodyEl.innerHTML = html;
                   </svg>
                 </button>
               </div>
+            </div>
+            <div class="note-row">
+              <div class="card-note" title="${noteTitle}">${noteHtml}</div>
             </div>
 
             <div class="price-row">
@@ -1778,24 +1812,29 @@ if(dashBodyEl) dashBodyEl.innerHTML = html;
               <div class="pill red">
                 <div class="k">止损</div>
                 <div class="v">${formatCNY(it.stop)}</div>
+              <div class="d">${escapeHtml(stopDelta)}</div>
               </div>
               <div class="pill amber">
                 <div class="k">支撑</div>
                 <div class="v">${formatCNY(it.support)}</div>
+              <div class="d">${escapeHtml(supportDelta)}</div>
               </div>
               ${Number.isFinite(it.breakout) ? `
               <div class="pill blue">
                 <div class="k">突破位</div>
                 <div class="v">${formatCNY(it.breakout)}</div>
+              <div class="d">${escapeHtml(breakoutDelta)}</div>
               </div>` : ``}
               <div class="pill green">
                 <div class="k">止盈1</div>
                 <div class="v">${formatCNY(it.tp1)}</div>
+              <div class="d">${escapeHtml(tp1Delta)}</div>
               </div>
               ${Number.isFinite(it.tp2) ? `
               <div class="pill green">
                 <div class="k">止盈2</div>
                 <div class="v">${formatCNY(it.tp2)}</div>
+              <div class="d">${escapeHtml(tp2Delta)}</div>
               </div>` : ``}
             </div>
           </div>
@@ -2197,22 +2236,6 @@ if(dashBodyEl) dashBodyEl.innerHTML = html;
     const btnClose = document.getElementById("btnClose");
     const btnCancel = document.getElementById("btnCancel");
     const btnSave = document.getElementById("btnSave");
-
-    function wireDraft(){
-      const handler = () => {
-        saveDraft({
-          stop: fStop.value.trim(),
-          support: fSupport.value.trim(),
-          breakout: fBreakout.value.trim(),
-          tp1: fTp1.value.trim(),
-          tp2: fTp2.value.trim(),
-          note: (fNote ? fNote.value.trim() : ""),
-        });
-      };
-      [fStop, fSupport, fBreakout, fTp1, fTp2, fNote].filter(Boolean).forEach(el => el.addEventListener("input", handler));
-    }
-    wireDraft();
-
     let modalMode = "add"; // "add" | "edit"
     let editingId = null;
 
@@ -2222,14 +2245,13 @@ if(dashBodyEl) dashBodyEl.innerHTML = html;
 
       if(mode === "add"){
         modalTitle.textContent = "添加股票";
-        const d = loadDraft();
         fSymbol.value = "";
-        if(fNote) fNote.value = d.note ?? "";
-        fStop.value = d.stop ?? "";
-        fSupport.value = d.support ?? "";
-        fBreakout.value = d.breakout ?? "";
-        fTp1.value = d.tp1 ?? "";
-        fTp2.value = d.tp2 ?? "";
+        if(fNote) fNote.value = "";
+        fStop.value = "";
+        fSupport.value = "";
+        fBreakout.value = "";
+        fTp1.value = "";
+        fTp2.value = "";
       }else{
         const it = items.find(x => x.id === id);
         if(!it) return;
